--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">JQuery</a>
+                    <a href="pages/jquery/listJquery.html" target="list">JQuery</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">列表一</a></dd>
                         <dd><a href="javascript:;">列表二</a></dd>
