修改js文件，关于form表单中radio的预先载入

--- a/pages/jquery/01preLoadFormElem.html
+++ b/pages/jquery/01preLoadFormElem.html
@@ -11,6 +11,9 @@
             margin: 30px auto;
             padding: 20px;
         }
+        .eventClass {
+
+        }
     </style>
 </head>
 <body>
@@ -30,16 +33,16 @@
         </form>
     </div>
     <!--radio 单选按钮 的载入-->
-    <!--<div class="item">
+    <div class="item">
         <h2>2.radio 单选按钮 的载入</h2>
         <form action="">
             <label>班次:</label>
-            <div>
-                <input type="radio" name="banci" value="0" title="白班" checked>
-                <input type="radio" name="banci" value="1" title="夜班">
+            <div class="eventClass">
+                <!--<input type="radio" name="eventClass" value="0" title="白班" checked>-->
+                <!--<input type="radio" name="eventClass" value="1" title="夜班">-->
             </div>
         </form>
-    </div>-->
+    </div>
 
 <!--script引入-->
     <script src="../../assets/libs/jquery/jquery-3.3.1.js"></script>
