--- a/pages/jquery/listJquery.html
+++ b/pages/jquery/listJquery.html
@@ -11,7 +11,10 @@
             <p>表单元素的预先载入</p>
             <p>链接：<a href="01preLoadFormElem.html">01preLoadFormElem.html</a></p>
         </li>
-        <li><a href="#">2</a></li>
+        <li>
+            <p>JQuery输入完成后自动跳到下一个输入框</p>
+            <p>链接：<a href="02onfocus.html">02onfocus.html</a></p>
+        </li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
