新增layui-layui录入案例 新增jquery-键盘控制输入一个字符

--- a/pages/layui/listLayui.html
+++ b/pages/layui/listLayui.html
@@ -8,7 +8,9 @@
     <h1>Layui-学习目录</h1>
     <ul>
         <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
+        <li>
+            <a href="02layuiInput.html">02layui录入界面</a>
+        </li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
