echarts新增引入echarts (2)新增echarts实例与柱状图（3）修改echarts目录

--- a/pages/echarts/listEcharts.html
+++ b/pages/echarts/listEcharts.html
@@ -7,8 +7,8 @@
 <body>
     <h1>Echarts-学习目录</h1>
     <ul>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
+        <li><a href="day01/demo.html">1.5分钟上手Echarts</a></li>
+        <li><a href="day01/bar.html">2.柱状图实例</a></li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
