--- a/pages/layui/listLayui.html
+++ b/pages/layui/listLayui.html
@@ -14,7 +14,7 @@
         <li><a href="03layuiLayout.html">03.---layui页面元素---布局</a></li>
         <li><a href="04layuiForm.html">04.---04layui页面元素---表单</a></li>
         <li><a href="05layuiTab.html">05.---05layui页面元素---Tab选项卡</a></li>
-        <li><a href="#">2</a></li>
+        <li><a href="06layuiProgress.html">06.---06layui页面元素---进度条</a></li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
