（1）新增layui面板 （2）修改layui目录

--- a/pages/layui/listLayui.html
+++ b/pages/layui/listLayui.html
@@ -15,7 +15,7 @@
         <li><a href="04layuiForm.html">04.---04layui页面元素---表单</a></li>
         <li><a href="05layuiTab.html">05.---05layui页面元素---Tab选项卡</a></li>
         <li><a href="06layuiProgress.html">06.---06layui页面元素---进度条</a></li>
-        <li><a href="#">3</a></li>
+        <li><a href="07layuiCard.html">07.---07layui页面元素---面板</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
         <li><a href="#">1</a></li>
