（1）新增layui徽章 （2）修改layui目录

--- a/pages/layui/listLayui.html
+++ b/pages/layui/listLayui.html
@@ -17,7 +17,7 @@
         <li><a href="06layuiProgress.html">06.---06layui页面元素---进度条</a></li>
         <li><a href="07layuiCard.html">07.---07layui页面元素---面板</a></li>
         <li><a href="08layuiTable.html">08.---08layui页面元素---静态表格</a></li>
-        <li><a href="#">5</a></li>
+        <li><a href="09layuiBadge.html">09.---09layui页面元素---徽章</a></li>
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
