--- a/pages/layui/listLayui.html
+++ b/pages/layui/listLayui.html
@@ -19,7 +19,7 @@
         <li><a href="08layuiTable.html">08.---08layui页面元素---静态表格</a></li>
         <li><a href="09layuiBadge.html">09.---09layui页面元素---徽章</a></li>
         <li><a href="10layuiTimeline.html">10.---10layui页面元素---时间线</a></li>
-        <li><a href="#">2</a></li>
+        <li><a href="11layuiHelpElements.html">11.---11layui页面元素---辅助元素</a></li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
