新增layui-layer并修改layui目录文件

--- a/pages/layui/listLayui.html
+++ b/pages/layui/listLayui.html
@@ -20,7 +20,7 @@
         <li><a href="09layuiBadge.html">09.---09layui页面元素---徽章</a></li>
         <li><a href="10layuiTimeline.html">10.---10layui页面元素---时间线</a></li>
         <li><a href="11layuiHelpElements.html">11.---11layui页面元素---辅助元素</a></li>
-        <li><a href="#">3</a></li>
+        <li><a href="12layer.html">12.---12layui内置模块---layer</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
         <li><a href="#">1</a></li>
