新增模块--每日一题，创建目录，主页目录增加，新增20181210

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
+                    <a href="pages/dayDayUp/listDayDayUp.html" target="list">每日一题</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;">列表一</a></dd>
+                        <dd><a href="javascript:;">列表二</a></dd>
+                        <dd><a href="">超链接</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
                     <a href="javascript:;">其他</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;">列表一</a></dd>
