（1）jsExample.html和jsExample.js添加新的测试例子 （2）每日一题练习增加

--- a/pages/dayDayUp/listDayDayUp.html
+++ b/pages/dayDayUp/listDayDayUp.html
@@ -8,8 +8,8 @@
     <h1>每日一题-学习目录</h1>
     <ul>
         <li><a href="#">1</a></li>
-        <li><a href="day20181210.html">在数组arr中，查找值与item相等的元素出现的位置</a></li>
-        <li><a href="#">4</a></li>
+        <li><a href="day20181210.html">day20181210 在数组arr中，查找值与item相等的元素出现的位置</a></li>
+        <li><a href="day20190102.html">day20190102 判断字符串中某一特定字符出现的次数</a></li>
         <li><a href="#">5</a></li>
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
